# OpenClassrooms_projet_5

./: README.md  README2.md  default.env  docker-compose.yml  healthcare.py  readme.md  readme.txt
Container/: docker-compose.yml
Container/MongoDbServer/: README.md
Container/Python_Migration/: Dockerfile  Healthcare.py  README.md  pyproject.toml
Container/Python_test/: Dockerfile  README.md  healthcare.py  pyproject.toml
containerDatabase/: Dockerfile
containerDatabase/scripts/: createUser.js
containerMigration/: Dockerfile  requirements.txt
containerMigration/scripts/: scriptMigration.py
containerTest/: Dockerfile  requirements.txt
containerTest/scripts/: scriptTest.py
dataToMigrate/: healthCare.csv
test/Container/Python_Migration/: Dockerfile  pyproject.toml
